[package]
name = "customs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
duct = "0.13.6"
toml = { version = "0.8.6", features = ["preserve_order"] }
toml_edit = "0.20.7"
typed-builder = "0.18.0"
